@@ -24,6 +24,7 @@ wpa (1:1.0~rc2-1) UNRELEASED; urgency=low
   * convert packaging to Multi-Arch, bump compat level to 9 and debhelper
     build-dependency accordingly; all binaries are Multi-Arch=foreign.
   * update debian/copyright for wpa 1.0~rc2 and merged sources.
+  * fix clean target and make sure to succeed building twice in a row.
 
   [ Kel Modderman ]
   * export BINDIR=/sbin, the build system now requires it when patching
@@ -51,7 +52,7 @@ wpa (1:1.0~rc2-1) UNRELEASED; urgency=low
   * Remove Faidon Liambotis <paravoid@debian.org> from Uploaders as per
     his request, many thanks for all past efforts Faidon.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 14 Apr 2012 00:58:32 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 14 Apr 2012 01:34:13 +0200
 
 wpasupplicant (0.7.3-6) unstable; urgency=low
 
